@@ -479,6 +479,8 @@ Tools/Demos
 Build
 -----
 
+- Link the shared python library with $(MODLIBS).
+
 - Issue #5134: Silence compiler warnings when compiling sqlite with VC++.
 
 - Issue #4494: Fix build with Py_NO_ENABLE_SHARED on Windows.
